🚀 Finalisation du projet MCP Weather Server avec support complet PowerShell et Shell

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@ asyncio-mqtt
 python-json-logger
 typing-extensions
 
+# Dépendances pour le serveur HTTP
+fastapi>=0.104.0
+uvicorn>=0.24.0
+
 # Dépendances pour les tests avec modèles IA
 anthropic>=0.7.0
 openai>=1.0.0
